--- a/views/index.jade
+++ b/views/index.jade
@@ -49,12 +49,8 @@ html
         p Huoli -toimintamalli on kehitetty keväällä 2015 yhteistyössä Mikkelin kaupungin vanhusneuvoston ja Vanhustyön keskusliiton kanssa. Toimintamalli vastaa aitoon tarpeeseen: haluamme helpottaa huolestuneen henkilön yhteydenoton mahdollisuutta ja tehdä välittämisen ilmaisemisesta mahdollisimman helppoa. Palvelu on auki ajasta ja paikasta riippumatta. Se on helppo käyttää ja voit luottaa siihen, että ammattilainen huolehtii jatkosta.
         br
         div(class='row')
-          div(class='col-lg-3')
-          div(class='col-lg-3')
-            img(class='img-responsive center-block', src=root+'/img/mkl.png', style="max-width:300px; margin-top:40px;")
-          div(class='col-lg-3')
-            img(class='img-responsive center-block', src=root+'/img/lupaus.png', style="max-width:300px;-ms-transform: rotate(20deg);-webkit-transform: rotate(20deg);transform: rotate(20deg);")
-          div(class='col-lg-3')
+          div(class='col-lg-12')
+            img(class='img-responsive center-block', src=root+'/img/essote_logo.png', style="max-width:300px; margin-top:40px;")
         br
         p(style='font-size:16px;')
           | "Huoli" on 
