Updated index links

--- a/views/index.jade
+++ b/views/index.jade
@@ -54,10 +54,10 @@ html
         br
         p(style='font-size:16px;')
           | "Huoli" on 
-          a(href='http://www.mikkeli.fi/palvelut/palveluneuvo', style='color:white; text-decoration:underline;') Palveluneuvon
+          a(href='https://www.essote.fi/asiakkaalle/palvelut/vanhus-ja-vammaispalvelut/palveluneuvo/', style='color:white; text-decoration:underline;') Palveluneuvon
           | &nbsp;palvelu 
         br
-        a(style='font-size:10px; color:white;' href=root+'/img/Tietosuojaseloste.pdf') tietosuojaseloste
+        a(style='font-size:10px; color:white;' href='https://www.metatavu.fi/tietosuojaseloste/') tietosuojaseloste
       br
       div(style='display:none', class='loader-container')
         img(src=root+'/img/loader.gif', class='center-block')
